namespace Infrastructure;

public class ActuatorModel
{
    public int WorkOrderNumber { get; set; } //PPK

    public int SerialNumber { get; set; } //PPK
    
    public int PCBAUid { get; set; }
}