namespace Backend.Model;

public class ComponentModel
{
    public string Type { get; set; }
    public string ArticleNumber { get; set; }
    public string ArticleName { get; set; }
    public string CurrentlyInstalled { get; set; }
    public string InstalledTime { get; set; }

}